--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
  <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/vareniky.html">Vareniky</a>
-    
+    <a href="recipes/potato-pancakes.html">Potato Pancakes</a>
  </body>
  </html>
