--- a/recipes/vareniky.html
+++ b/recipes/vareniky.html
@@ -7,12 +7,11 @@
  </head>
  <body>
     <h1>Vareniky</h1>
-    <a href="../index.html">Home</a>
 
     <img src="../images/final.jpg" alt="Final product of the vareniki" height="310" width="310">
 
 
-    <h3>Final product of the vareniki</h3>
+    <h3>Final product of the Vareniki</h3>
     <p>This dish is a classic in many European countries.  Filled with either mashed potatoes, cheese, mushrooms, or even sauerkraut, this delicious dumpling-like meal is good anytime and anywhere.</p>
 
     <h3>Ingredients</h3>
@@ -37,5 +36,6 @@
         <li>Divide dough into 4 portions and roll each portion into a 1 1/2-inch thick rope. Cut ropes into small 1/2-inch pieces. Press each dough piece into a small flat circle and place 1 teaspoon of potato filling in the center. Fold dough over into a half-moon shape and seal edges.</li>
         <li>Bring a large pot of salted water to a gentle boil. Add the vareniki in batches and cook until they float to the surface, about 3 minutes. Cook for 2 to 3 minutes more. Remove with a slotted spoon and place in a colander to drain.</li>
     </ol>
+    <a href="../index.html">Home</a>
  </body>
  </html>
