--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
  </head>
  <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/vareniky.html">Vareniky</a>
-    <a href="recipes/potato-pancakes.html">Potato Pancakes</a>
+   
+    <ul>
+      <li><a href="recipes/vareniky.html">Vareniky</a></li>
+      <li><a href="recipes/potato-pancakes.html">Potato Pancakes</a></li>
+      <li><a href="recipes/strawberry-shortcake.html">Strawberry Shortcake</a></li>
+   </ul>
  </body>
  </html>
